--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node cli.js",
     "server": "ngrok"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "eslint": "^7.10.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "meow": "^7.1.1"
   }
 }
